# PhaserNative

./: .gitignore  CMakeLists.txt  README.md  phaser.js
cmake/Modules/: FindJavaScriptCore.cmake
cmake/Toolchains/: Desktop-cxx11-c99.cmake  Desktop-cxx14-c11.cmake
src/: ColorUtil.cpp  ColorUtil.h  PhaserGL.c  PhaserGL.h  PhaserNativeApp.cpp  PhaserNativeApp.h  PhaserNativeDebugRenderer.cpp  PhaserNativeDebugRenderer.h  PhaserNativeEvent.cpp  PhaserNativeEvent.h  PhaserNativeGraphics.cpp  PhaserNativeGraphics.h  PhaserNativePerfGraph.cpp  PhaserNativePerfGraph.h  PhaserNativeScript.cpp  PhaserNativeScript.h  PhaserNativeWindow.cpp  PhaserNativeWindow.h  main.cpp
src/JSC/: JSCClass.h  JSCConsole.cpp  JSCContext.cpp  JSCContext.h  JSCException.cpp  JSCException.h  JSCHelpers.cpp  JSCHelpers.h  JSCObject.cpp  JSCObject.h  JSCString.h  JSCTimer.cpp  JSCValue.cpp  JSCValue.h
src/bindings/: Bindings.cpp  Body.cpp  Body.h  Canvas.cpp  Canvas.h  CanvasGradient.cpp  CanvasGradient.h  CanvasPattern.cpp  CanvasPattern.h  CanvasRenderingContext2D.cpp  CanvasRenderingContext2D.h  Console.cpp  Console.h  DOMRectReadOnly.h  Document.cpp  Document.h  DocumentElement.cpp  DocumentElement.h  Element.h  Event.h  EventTarget.cpp  EventTarget.h  FileReader.cpp  FileReader.h  HTMLCanvasElement.cpp  HTMLCanvasElement.h  HTMLElement.h  Image.cpp  Image.h  KeyboardEvent.cpp  KeyboardEvent.h  Navigator.cpp  Navigator.h  Node.h  Performance.cpp  Performance.h  Phaser.cpp  Phaser.h  RenderingContext.h  Timer.cpp  (+9 more)
src/nanovg/: nanovg.c  perf.c  perf.h
